[gd_scene load_steps=6 format=2]

[ext_resource path="res://resourses/character/EnemyCraftController.gd" type="Script" id=1]
[ext_resource path="res://resourses/character/SpeederA.tscn" type="PackedScene" id=3]
[ext_resource path="res://resourses/scenes/objects/Extractor.tscn" type="PackedScene" id=4]
[ext_resource path="res://resourses/materials/metalRedEnemy.material" type="Material" id=5]

[sub_resource type="CylinderShape" id=15]
height = 7.0
radius = 25.0

[node name="EnemyCraftController" type="Node"]
pause_mode = 1
script = ExtResource( 1 )
grid_path = NodePath("../MapMaster/TerrainGridMap")
enemy_material = ExtResource( 5 )
extractor = ExtResource( 4 )

[node name="SpeederA" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -13.9678 )

[node name="AttentionArea" type="Area" parent="SpeederA"]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="SpeederA/AttentionArea"]
shape = SubResource( 15 )

[connection signal="area_entered" from="SpeederA/AttentionArea" to="." method="_on_AttentionArea_area_entered"]
